Fix: Detach css properties to multiple files for organizing, clarity and readability

--- a/web/static/css/login.css
+++ b/web/static/css/login.css
@@ -1,7 +1,7 @@
 .card {
     background: #f0c7ad !important;
     width: 420px;
-    padding: 30px;
+    padding: 40px;
     box-shadow: 0 10px 30px rgba(0,0,0,1);
     position:absolute !important;
     top:50%;
